fix star alignment

--- a/onomancer/static/style.css
+++ b/onomancer/static/style.css
@@ -319,6 +319,7 @@ a {
 
 .stars {
     flex: 2;
+    align-items: center;
 }
 
 .settingsForm {
